fix drawer width on small devices

--- a/src/assets/scss/_overwrites.scss
+++ b/src/assets/scss/_overwrites.scss
@@ -14,6 +14,7 @@
 
 .md-drawer {
     width: 280px;
+    min-width: 280px;
     max-width: calc(100vw - 125px);
 }
 
