--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -43,7 +43,7 @@
 		background-color: #f8f9fa;
 		background-image: url(assets/images/bg.png);
 		background-attachment: fixed;
-		background-size: 25%;
+		background-size: 20%;
 	}
 }
 
